--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@
     content="Escoja a su Buen Partido para la alcadía de Bogotá con la #BusetaElectoral">
   <meta property="twitter:image" content="https://cerosetenta.uniandes.edu.co/buenpartido/imgs/og.jpg">
 
-  <meta http-equiv="Content-Type" content="text/html;charset=UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="apple-touch-icon" sizes="57x57" href="./imgs/apple-icon-57x57.png">
   <link rel="apple-touch-icon" sizes="60x60" href="./imgs//apple-icon-60x60.png">
@@ -1061,7 +1060,7 @@
     <span id="download-img" class="inline inline-link"></span>
   </div>
 
-  <footer>
+  <footer id="footer-bp">
     <div class="logos">
       <a href="https://facartes.uniandes.edu.co/" target="_blank"><img src="./imgs/logo-facartes.png"
           alt="Facartes" /></a>
